# agentic-ai-crash-tut

./: README.md  pyproject.toml
.getaibd/: .gitignore
simple-llm-calling/: main.py
